--- a/public/map.html
+++ b/public/map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>🚚 The Listen - AI 경로 자동 정렬 배송관리</title>
+  <title>🚚 The Listen - AI·GPS 경로 최적화 배송관리</title>
   <style>
     html, body {
       margin: 0;
@@ -28,7 +28,7 @@
 
     #map {
       width: 100%;
-      height: 45%;
+      height: 50%;
     }
 
     #gps-toggle {
@@ -57,12 +57,11 @@
     }
     #gps-toggle.active svg { fill: white; }
 
-    /* 🚚 배송 카드 영역 */
     #delivery-list {
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 55%;
+      height: 50%;
       background: white;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
@@ -81,7 +80,9 @@
       flex-direction: column;
       justify-content: space-between;
       font-size: 14px;
+      transition: 0.2s;
     }
+    .card:hover { background-color: #f0f8ff; }
 
     .card strong {
       color: #007bff;
@@ -117,7 +118,7 @@
   <header>🚛 The Listen AI·GPS 자동 경로 정렬</header>
   <div id="map"></div>
 
-  <!-- GPS 토글 -->
+  <!-- GPS 버튼 -->
   <div id="gps-toggle" title="GPS 위치 추적 토글">
     <svg viewBox="0 0 24 24">
       <path d="M12 8a4 4 0 100 8 4 4 0 000-8zm9 3h-1.07a7.002 7.002 0 00-5.93-5.93V4a1 1 0 10-2 0v1.07a7.002 7.002 0 00-5.93 5.93H3a1 1 0 100 2h1.07a7.002 7.002 0 005.93 5.93V20a1 1 0 102 0v-1.07a7.002 7.002 0 005.93-5.93H21a1 1 0 100-2zm-9 5a5 5 0 110-10 5 5 0 010 10z"/>
@@ -126,7 +127,7 @@
 
   <!-- 배송 카드 리스트 -->
   <div id="delivery-list">
-    <div id="result-info">📍 GPS 활성화 후 AI 경로 최적화 순서 자동 정렬 중...</div>
+    <div id="result-info">📍 지도 마커 클릭 시 배송지 정보 표시 / GPS 활성화 시 거리 자동 계산</div>
     <div id="card-container"></div>
   </div>
 
@@ -152,23 +153,21 @@
       return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
     }
 
-    function renderCards(list) {
+    function showCard(info) {
       const container = document.getElementById("card-container");
       container.innerHTML = "";
-      list.forEach((p, idx) => {
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <div class="top">
-            <strong>${idx + 1}️⃣ ${p.name}</strong>
-            <button onclick="alert('고객에게 전화 연결: ${p.phone}')">📞 전화</button>
-          </div>
-          <div><b>운송장:</b> ${p.waybill}</div>
-          <div><b>주소:</b> ${p.address}</div>
-          <div><b>거리:</b> ${p.distance ? p.distance.toFixed(2) + " km" : "-"}</div>
-        `;
-        container.appendChild(card);
-      });
+      const card = document.createElement("div");
+      card.className = "card";
+      card.innerHTML = `
+        <div class="top">
+          <strong>${info.name}</strong>
+          <button onclick="alert('고객에게 전화 연결: ${info.phone}')">📞 전화</button>
+        </div>
+        <div><b>운송장:</b> ${info.waybill}</div>
+        <div><b>주소:</b> ${info.address}</div>
+        <div><b>거리:</b> ${info.distance ? info.distance.toFixed(2) + " km" : "-"}</div>
+      `;
+      container.appendChild(card);
     }
 
     window.onload = function() {
@@ -177,16 +176,21 @@
       map = new kakao.maps.Map(mapContainer, mapOption);
 
       const bounds = new kakao.maps.LatLngBounds();
+
+      // 마커 생성 및 클릭 이벤트 연결
       deliveryPoints.forEach(p => {
         const pos = new kakao.maps.LatLng(p.lat, p.lng);
-        new kakao.maps.Marker({ map, position: pos });
+        const marker = new kakao.maps.Marker({ map, position: pos });
         bounds.extend(pos);
+        kakao.maps.event.addListener(marker, "click", () => {
+          showCard(p);
+        });
       });
+
       map.setBounds(bounds);
 
       const gpsBtn = document.getElementById("gps-toggle");
       const info = document.getElementById("result-info");
-      renderCards(deliveryPoints); // 초기 표시
 
       gpsBtn.addEventListener("click", () => {
         if (gpsBtn.classList.contains("active")) {
@@ -218,13 +222,11 @@
 
               map.setCenter(loc);
 
-              const sorted = deliveryPoints.map(p => ({
-                ...p,
-                distance: calculateDistance(myLat, myLng, p.lat, p.lng)
-              })).sort((a, b) => a.distance - b.distance);
-
-              info.textContent = "🚛 가까운 순서로 자동 정렬 중...";
-              renderCards(sorted);
+              // 거리 업데이트
+              deliveryPoints.forEach(p => {
+                p.distance = calculateDistance(myLat, myLng, p.lat, p.lng);
+              });
+              info.textContent = "🚛 GPS 활성화됨 - 마커 클릭 시 거리 포함 카드 표시";
             }, () => {
               alert("GPS 권한을 확인해주세요.");
             }, { enableHighAccuracy: true });
